# penny

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml
app/: .dockerignore  Dockerfile  pyproject.toml
app/penny/: agent.py  config.py  constants.py  penny.py
app/penny/agent/: __init__.py  agent.py  base.py  controller.py
app/penny/agent/agents/: __init__.py  followup.py  message.py
app/penny/agentic/: __init__.py  config.py  controller.py  models.py  tool_executor.py
app/penny/channels/: README.md  __init__.py  base.py
app/penny/channels/discord/: __init__.py  agent.py  channel.py  models.py
app/penny/channels/signal/: channel.py  models.py
app/penny/database/: __init__.py  database.py  migrate.py  models.py
app/penny/memory/: __init__.py  context.py  database.py  models.py
app/penny/ollama/: __init__.py  client.py  models.py
app/penny/scheduler/: __init__.py  base.py  schedules.py
app/penny/signal/: client.py  models.py
app/penny/tests/: conftest.py  test_migrations.py
app/penny/tests/integration/: test_message_flow.py
app/penny/tests/mocks/: __init__.py  ollama_server.py  (+2 more)
app/penny/tools/: __init__.py  base.py  builtin.py  models.py
penny-team/: CLAUDE.md  Dockerfile  README.md  base.py  entrypoint.sh  issue_filter.py  orchestrator.py  pr_checks.py  pyproject.toml
penny-team/architect/: CLAUDE.md
penny-team/penny_team/: base.py  constants.py  monitor.py  orchestrator.py  quality.py
penny-team/penny_team/architect/: CLAUDE.md
penny-team/penny_team/monitor/: CLAUDE.md
penny-team/penny_team/product-manager/: CLAUDE.md
penny-team/penny_team/utils/: codeowners.py  github_api.py  github_app.py  issue_filter.py  ollama_embed.py  pr_checks.py
penny-team/penny_team/worker/: CLAUDE.md
penny-team/scripts/: entrypoint.sh
penny-team/tests/: conftest.py  test_agent_flows.py  test_agent_shared.py  test_architect.py  test_base.py  test_codeowners.py  test_issue_filter.py  test_monitor.py  test_orchestrator.py  test_pr_checks.py  test_product_manager.py  test_quality.py  test_similarity.py  test_worker.py
(+486 files in other folders)
